--- a/unit2_functions_testing/index.html
+++ b/unit2_functions_testing/index.html
@@ -431,6 +431,7 @@ title="Print to PDF"
 <li><p>De Morgan’s Laws</p></li>
 <li><p>unit testing</p></li>
 </ul>
+<p><img alt="" src="../_images/01.png" /></p>
 <p>Demo files:</p>
 <ul class="simple">
 <li><p><a href="../unit2_demo/HelloFunctions.java">HelloFunctions.java</a></p></li>
