deploy: 72b96498b7b0be36287fad11ed7794119a104c0f

--- a/setup/installation_windows.html
+++ b/setup/installation_windows.html
@@ -757,7 +757,7 @@ that facilitates interacting with repositories on GitHub.</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./setup"
         },
         predefinedOutput: true
