--- a/summer_assignment/summer_assignment.html
+++ b/summer_assignment/summer_assignment.html
@@ -791,7 +791,7 @@ email me.  Have fun!</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./summer_assignment"
         },
         predefinedOutput: true
