--- a/unit0_numeric_conversion/Unit0_Assignment.html
+++ b/unit0_numeric_conversion/Unit0_Assignment.html
@@ -732,7 +732,7 @@ and which parts you did on your own.</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit0_numeric_conversion"
         },
         predefinedOutput: true
