--- a/unit10_lists_of_objects/Unit10_Assignment.html
+++ b/unit10_lists_of_objects/Unit10_Assignment.html
@@ -781,7 +781,7 @@ written in PersonStats, or in an external PersonStatsTest class.</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit10_lists_of_objects"
         },
         predefinedOutput: true
