--- a/unit11_inheritance_interfaces/Unit11_Assignment.html
+++ b/unit11_inheritance_interfaces/Unit11_Assignment.html
@@ -757,7 +757,7 @@ class.</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit11_inheritance_interfaces"
         },
         predefinedOutput: true
