--- a/unit12_2d_arrays/Unit12_Assignment.html
+++ b/unit12_2d_arrays/Unit12_Assignment.html
@@ -760,7 +760,7 @@ returns the object with the greatest area.</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit12_2d_arrays"
         },
         predefinedOutput: true
