--- a/unit12_2d_arrays/index.html
+++ b/unit12_2d_arrays/index.html
@@ -686,7 +686,7 @@ title="Print to PDF"
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit12_2d_arrays"
         },
         predefinedOutput: true
