--- a/unit13_interacting_classes/Unit13_Assignment.html
+++ b/unit13_interacting_classes/Unit13_Assignment.html
@@ -720,7 +720,7 @@ favorite number is odd</p></li>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit13_interacting_classes"
         },
         predefinedOutput: true
