--- a/unit1_java_basics/Unit1_Assignment.html
+++ b/unit1_java_basics/Unit1_Assignment.html
@@ -818,7 +818,7 @@ this limit is?</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit1_java_basics"
         },
         predefinedOutput: true
