--- a/unit2_functions_testing/Unit2_Assignment.html
+++ b/unit2_functions_testing/Unit2_Assignment.html
@@ -752,7 +752,7 @@ print only the ones for which <code class="docutils literal notranslate"><span c
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit2_functions_testing"
         },
         predefinedOutput: true
