--- a/unit3_string_math/Unit3_Assignment.html
+++ b/unit3_string_math/Unit3_Assignment.html
@@ -741,7 +741,7 @@ return 1, 2, 3, 4, 5, or 6.</p></li>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit3_string_math"
         },
         predefinedOutput: true
