--- a/unit3_string_math/index.html
+++ b/unit3_string_math/index.html
@@ -646,7 +646,7 @@ title="Print to PDF"
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit3_string_math"
         },
         predefinedOutput: true
