--- a/unit4_loops/Unit4_Assignment.html
+++ b/unit4_loops/Unit4_Assignment.html
@@ -726,7 +726,7 @@ function.</p></li>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit4_loops"
         },
         predefinedOutput: true
