--- a/unit4_loops/index.html
+++ b/unit4_loops/index.html
@@ -709,7 +709,7 @@ title="Print to PDF"
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit4_loops"
         },
         predefinedOutput: true
