--- a/unit5_classes/Unit5_Assignment.html
+++ b/unit5_classes/Unit5_Assignment.html
@@ -815,7 +815,7 @@ class declaration, including proper declaration of member variables and methods
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit5_classes"
         },
         predefinedOutput: true
