--- a/unit6_processing_libraries/Unit6_Assignment.html
+++ b/unit6_processing_libraries/Unit6_Assignment.html
@@ -677,7 +677,7 @@ Processing libraries.</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit6_processing_libraries"
         },
         predefinedOutput: true
