--- a/unit6_processing_libraries/index.html
+++ b/unit6_processing_libraries/index.html
@@ -694,7 +694,7 @@ setup.</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit6_processing_libraries"
         },
         predefinedOutput: true
