--- a/unit7_arrays/Unit7_Assignment.html
+++ b/unit7_arrays/Unit7_Assignment.html
@@ -785,7 +785,7 @@ Processing functions via a PApplet reference.</p></li>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit7_arrays"
         },
         predefinedOutput: true
