--- a/unit7_arrays/index.html
+++ b/unit7_arrays/index.html
@@ -674,7 +674,7 @@ title="Print to PDF"
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit7_arrays"
         },
         predefinedOutput: true
