--- a/unit8_arraylist/Unit8_Assignment.html
+++ b/unit8_arraylist/Unit8_Assignment.html
@@ -740,7 +740,7 @@ the total length of the strings that start with “z” or “Z”.</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit8_arraylist"
         },
         predefinedOutput: true
