--- a/unit9_array_algorithms/Unit9_Assignment.html
+++ b/unit9_array_algorithms/Unit9_Assignment.html
@@ -984,7 +984,7 @@ threshold.  For example, once the absolute value of the term falls below
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit9_array_algorithms"
         },
         predefinedOutput: true
