--- a/setup/classpath.html
+++ b/setup/classpath.html
@@ -703,7 +703,7 @@ Powershell.</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./setup"
         },
         predefinedOutput: true
