--- a/setup/command_line.html
+++ b/setup/command_line.html
@@ -858,7 +858,7 @@ polished programming language like Python or C/C++/Java.</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./setup"
         },
         predefinedOutput: true
