--- a/setup/installation_mac.html
+++ b/setup/installation_mac.html
@@ -744,7 +744,7 @@ that facilitates interacting with repositories on GitHub.</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./setup"
         },
         predefinedOutput: true
