--- a/setup/java_version.html
+++ b/setup/java_version.html
@@ -703,7 +703,7 @@ on Catalina).</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./setup"
         },
         predefinedOutput: true
