--- a/unit0_numeric_conversion/index.html
+++ b/unit0_numeric_conversion/index.html
@@ -726,7 +726,7 @@ title="Print to PDF"
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit0_numeric_conversion"
         },
         predefinedOutput: true
