--- a/unit11_inheritance_interfaces/index.html
+++ b/unit11_inheritance_interfaces/index.html
@@ -726,7 +726,7 @@ title="Print to PDF"
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit11_inheritance_interfaces"
         },
         predefinedOutput: true
