--- a/unit5_classes/index.html
+++ b/unit5_classes/index.html
@@ -728,7 +728,7 @@ title="Print to PDF"
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit5_classes"
         },
         predefinedOutput: true
