--- a/unit8_arraylist/index.html
+++ b/unit8_arraylist/index.html
@@ -669,7 +669,7 @@ title="Print to PDF"
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./unit8_arraylist"
         },
         predefinedOutput: true
